# kompoti

./: README.md  fulldatabase.json  latest_movies.json  scraper.py
.github/workflows/: main.yml  update-movies.yml  update_movies.yml
publisher/: Cargo.toml  local_test_secret.py
publisher/src/: main.rc
