[package]
name = "kinoteka-publisher"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.49", features = ["full", "signal"] }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
log = "0.4"
env_logger = "0.11"
iroh = "0.95.1"
iroh-docs = "0.95.0"
iroh-blobs = "0.97.0"
iroh-gossip = "0.95.0"
iroh-n0des = { git = "https://github.com/n0-computer/iroh-n0des", branch = "main", features = ["tickets"] }
iroh-tickets = "0.2.0"
postcard = { version = "1", features = ["use-std"] }
rand = "0.9"
